# svmkit-yellowstone-grpc-demo

./: .gitignore  .gitmodules  Pulumi.yaml  README.md  aws.ts  grpc_geyser.ts  index.ts  package-lock.json  package.json  ssh-to-host  tsconfig.client.json  tsconfig.json  yellowstone-config.json
client/: index.ts  package-lock.json  package.json  tsconfig.json
src/: aws.ts  grpc_geyser.ts  index.ts  network.ts  validator.ts  vixen-server.ts
src/client/: index.ts
vixen-client/: Cargo.toml
vixen-client/src/: main.rs
vixen-server/: .env.example  Cargo.toml  Dockerfile  vixen.example.toml
vixen-server/src/: main.rs
