[package]
name = "vixen-client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.33", features = ["derive"] }
color-eyre = "0.6.3"
prost = "0.13.5"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
yellowstone-vixen = { version = "0.1.0", features = ["stream"] }
yellowstone-vixen-parser = { version = "0.1.0", features = ["proto", "token-extensions", "token-program"] }

[build-dependencies]
prost-build = "0.13.1"
